--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "echo \"No build specified\" && exit 1",
+8   "test": "echo \"No test specified\" && exit 1",
+9    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
